kubernetes/istio/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    pod-security.kubernetes.io/enforce: privileged
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-ingress
  labels:
    pod-security.kubernetes.io/enforce: privileged
    istio-injection: enabled
